@@ -1,4 +1,7 @@
 2010-07-28  Petasis George  <petasis@iit.demokritos.gr>
+        * library/tkdnd_unix.tcl:
+        * library/tkdnd_windows.tcl: Fixed bug 2169256.
+
         * library/tkdnd.tcl: Fixed bug 2486830.
 
 2010-06-16  Petasis George  <petasis@iit.demokritos.gr>
